add fig:1st div

--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -38,7 +38,7 @@
 
 \address[mymainaddress]{School of Mechanical and Electronical Engineering, Lanzhou University of Technology. Lanzhou 730050, China}
 \begin{abstract}
- The fracture processes of nanocrystalline metallic materia is affected by dislocation, nanovoid and other defects. Existing studies of defect evolution in titanium-aluminium alloy cover the case that voids located in single crystals, inside grain in poly crystals and at the grain boundaries.Molecular dynamics simulation was performed to study the evolution of a spherical nanovoid in $\alpha$+$\gamma$ two-phase titanium-aluminium alloy under uniaxial tension.
+ The fracture processes of nanocrystalline metallic materia is affected by dislocation, nanovoid and other defects. Existing studies of defect evolution in titanium-aluminium alloy cover the case that voids located in single crystals, inside grain in poly crystals and at the grain boundaries.Molecular dynamics simulation was performed to study the evolution of a spherical nanovoid in $\alpha$+$\gamma$ two-phase titanium-aluminium alloy under uniaxial tension. The results show that voids located at the $\alpha$/$\gamma$ phase boundary have significant detract to strength of Ti-Al polycrystalline.
 \end{abstract}
 \begin{keyword}
 $\alpha$+$\gamma$ two phase TiAl alloy; void; molecular dynamics
@@ -47,7 +47,7 @@ $\alpha$+$\gamma$ two phase TiAl alloy; void; molecular dynamics
 \linenumbers
 
 \section{Introduction}
-TiAl alloy has been used as structural material in aviation industry because its inherent advantages such as low density and self-diffusion rates, high elastic module and high strength \cite{Xiong2015}. However, single phase $\gamma-\rm TiAl$ generally brittle at room temperatures and this limits their use in many other fields.Two-phase titanium aluminum alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\gamma$($\rm Ti_3Al$) alloy \cite{intro-structure}.
+TiAl alloy has been used as structural material in aviation industry because its inherent advantages such as low density and self-diffusion rates, high elastic module and high strength \cite{}. However, single phase $\gamma-\rm TiAl$ generally brittle at room temperatures and this limits their use in many other fields.Two-phase titanium aluminum alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\gamma$($\rm Ti_3Al$) alloy \cite{}.
 
 Two phase titanium aluminide alloys exhibit a much better mechanical performance than their monolithic
 constituents $\gamma$(TiAl) and $\alpha_2$ (Ti3Al), provided that the phase distribution and grain size are suitably controlled. Two-phase titantium aliuminde alloys with proper phase distribution and grain size exhibit better mechanicalperformance compared with monolithicconstituents gamma and alpha[].
@@ -153,7 +153,13 @@ Dislocations crossing semi-coherent boundaries have to intersect the misfit disl
 	\label{fig:ag_line}
 \end{figure}
 
-\subsection{Fracture Process}
+%\subsection{Fracture Process with Integranular Void }
+
+%\subsection{Fracture Process with Intergranular Void }
+
+\subsection{Evolution of spherical boid in the simulation with intragranular spherical voids}
+A step, of the width of a burgers vector, will be generated at both sidesof a crystal along teh direction of teh burgers vector after dislocation traversing teh entire crystal, as is shown in \ref{fig:}. A small tep will be formed at spherical void surface toward teh void interiorafter dislocation absorptionat sphericalvoid surfaces, as is shown in \ref{fig:}. If a great number of dislocation slip along their respective systemstowards teh spherical nanovoid in all directions, and are absorbed at spherical void surfaces, the spherical nanovoid will eventually shrink from teh dash circle to 
+
 
 \begin{figure}
 	\centering
@@ -161,6 +167,14 @@ Dislocations crossing semi-coherent boundaries have to intersect the misfit disl
 	\label{fig:surf}
 	\caption{stress-strain curve}
 \end{figure}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=1\linewidth]{img/1stdiv}
+	\label{fig:surf}
+	\caption{stress-strain curve}
+\end{figure}
+
 
 \section{Conclusion}
 %\bibliographystyle{elsarticle-num.bst}
