--- a/draft/ref/VIOLET-background.bib
+++ b/draft/ref/VIOLET-background.bib
@@ -7,7 +7,7 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
 abstract = {Using a combination of infrared absorption and small-angle x-ray scattering$\backslash$non hydrogenated$\backslash$n$\backslash$namorphous silicon alloy films and efficiency measurements of solar$\backslash$ncells with intrinsic layers$\backslash$n$\backslash$nprepared under nominally identical conditions to those for the deposition$\backslash$nof the films, we$\backslash$n$\backslash$nobserve a correlation between microstructure in the films and solar$\backslash$ncell performance. With$\backslash$n$\backslash$nincreasing microvoid density, both the initial and light-degraded$\backslash$nperformance of solar cells are$\backslash$n$\backslash$nfound to deteriorate.},
 author = {Guha, S. and Yang, J. and Jones, Scott J. and Chen, Yan and Williamson, D. L.},
 doi = {10.1063/1.107564},
-file = {::;:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Study on the residual stress relaxation in girth-welded steel pipes under bending load using diffraction methods(78).pdf:pdf},
+file = {:home/alex/Documents/Mendeley Desktop/1992/1992{\_}Effect of microvoids on initial and light-degraded efficiencies of hydrogenated amorphous silicon alloy solar cells.pdf:pdf},
 issn = {00036951},
 journal = {Applied Physics Letters},
 keywords = {AMORPHOUS STATE,DEFECTS,DEGRADATION,EFFICIENCY,HYDROGEN ADDITIONS,INFRARED SPECTRA,MICROSTRUCTURE,P−I−N JUNCTIONS,SILICON SOLAR CELLS,VOIDS,X−RAY DIFFRACTION},
@@ -20,55 +20,21 @@ url = {http://aip.scitation.org/doi/10.1063/1.107564},
 volume = {61},
 year = {1992}
 }
-@article{Greenfield1972,
-abstract = {An investigation has shown that it is possible to relate void formation, void growth, and tensile ductility to microstructural features in an $\alpha$-$\beta$ titanium alloy, Ti-5.25A1-5.5V-0.9Fe-0.5Cu, heat treated to a constant yield strength. Equations relating tensile void growth rates to microstructure for both equiaxed,E, and Widmanst{\"{a}}tten plus grain boundary$\alpha$, W + ITG. B.,in aged $\beta$ morphologies have been derived. A mechanism for void formation at $\alpha$-$\beta$ interfaces is presented which accounts for the observed fact that voids do not form at Widmanst{\"{a}}tten $\alpha$ platelets. Tensile fracture is shown to be intergranular in nature and occurs when a critical crack length-stress relationship is satisfied. The amount of ductility achievable in a specimen depends upon the rate of void growth. If the rate is large, the void reaches a critical size for fracture at a lower applied stress and strain and hence the ductility is less.},
-author = {Greenfield, M. A. and Margolin, H.},
-doi = {10.1007/BF02644241},
-file = {:home/alex/Documents/Mendeley Desktop/1972/1972{\_}Mechanism of Void Formation, Void Growth, and Tensile Fracture in an Alloy Consisting of Two Ductile Phases.pdf:pdf},
-issn = {0360-2133},
-journal = {Metall Trans},
-month = {oct},
-number = {10},
-pages = {2649--2659},
-publisher = {Springer-Verlag},
-title = {{Mechanism of Void Formation, Void Growth, and Tensile Fracture in an Alloy Consisting of Two Ductile Phases.}},
-url = {http://link.springer.com/10.1007/BF02644241},
-volume = {3},
-year = {1972}
-}
-@article{void.creep,
-abstract = {An investigation on the effect of aging on the tensile properties and creep behavior of a fully lamellar (FL) Ti-47Al-2Nb-1Mn-0.5W-0.5Mo-0.2Si (at.{\%}) alloy is presented. Aging at intermediate temperatures produces precipitate particles predominantly along $\alpha$2/$\gamma$ lamellar interfaces or within $\alpha$2lamellae. Most of the precipitates are $\beta$-particles with fewer silicides. Aging at intermediate temperatures leads to increased tensile strength as a result of precipitation of $\beta$ and silicide particles. In addition, aging yields an increased primary creep resistance but a shortened creep life for the FL structure. The shortened creep life of the aged FL structures could be a result of early decomposition of $\alpha$2lamellae during creep. {\textcopyright} 2002 Elsevier Science B.V. All rights reserved.},
-author = {Chen, W. R. and Beddoes, J. and Zhao, L.},
-doi = {10.1016/S0921-5093(01)01391-0},
-file = {::;:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Study on the residual stress relaxation in girth-welded steel pipes under bending load using diffraction methods(63).pdf:pdf},
-isbn = {0921-5093},
-issn = {09215093},
-journal = {Materials Science and Engineering A},
-keywords = {Aging,Creep,Fully lamellar structure,Tensile,$\gamma$-TiAl},
-month = {jan},
-number = {1-2},
-pages = {306--317},
-publisher = {Elsevier},
-title = {{Effect of aging on the tensile and creep behavior of a fully lamellar near $\gamma$-TiAl alloy}},
-volume = {323},
-year = {2002}
-}
-@article{Tang2010,
-abstract = {The growth and coalescence of voids in magnesium single crystals at the nanoscale have been investigated using molecular dynamics simulations and the embedded atom method. One void and two void specimens with identical initial void volume fractions were utilized to study the mechanism of void growth and coalescence. In order to study the influences of material length scale on void evolution in single crystals four specimen sizes with the same initial volume fraction of voids were considered. Investigations of the effects of temperature and strain rate were also performed. Uniaxial stress-strain curves were monitored during increasing employed strain. The simulation results show that the specimen size, loading strain rate and temperature had apparent influences on the twin or dislocation pattern, void evolution shape and uniaxial stress-strain responses, but negligible effects on the initial slopes of the uniaxial stress-strain curves. Furthermore, the nucleation stress of twin bands in orientation A - x[0 0 0 1]-y[1 over(2, ̄) 1 0]-z[1 0 over(1, ̄) 0] was much higher than that of plastic deformation in orientation B - x[1 over(2, ̄) 1 0]-y[1 0 over(1, ̄) 0]-z[0 0 0 1].},
-author = {Tang, Tian and Kim, Sungho and Horstemeyer, M. F.},
-doi = {10.1016/j.actamat.2010.05.011},
-isbn = {13596454},
-issn = {13596454},
-journal = {Acta Materialia},
-keywords = {Embedded atom method,Magnesium single crystals,Molecular dynamics simulations,Void coalescence,Void growth},
+@article{Izumi2003,
+abstract = {A nickel aluminide coating process was developed on $\gamma$-TiAl alloy by electroplating a Ni film followed by a high Al activity pack cementation carried out in a vacuum with a mixture of fine Al, NH4Cl, and Al2O3powders at 1273 K for 18 ks. The coating has a duplex layer structure, an outer Ni2Al3layer and an inner TiAl3/TiAl2/TiNiAl2layer. The coated TiAl was oxidized in air for up to 3600 ks under thermal cycling between room temperature and 1173 K. A protective Al2O3scale formed with little oxide exfoliation and the oxidation amount was 8 g/m2after the 3600 ks oxidation. During oxidation at 1173 K the as-coated layer structure changed from an outer Ni2Al3and inner TiAl3/TiAl2/TiNiAl2layers to an outer $\beta$-NiAl and inner TiAl2and TiNiAl2layers with voids in the outer layer. The voids appear to be formed by the phase change from the Ni2Al3to $\beta$-NiAl during oxidation. A part of the Ti-Al-Ni phase diagram at 1173 K was developed experimentally and it was shown that the solubility limits of Ti into both the Ni2Al3and $\beta$-NiAl phases were less than 0.5at.{\%}. The coating with more Al in the inner layer that in the outer layer would be formed by inward diffusion of Al, caused by a so-called up-hill diffusion phenomenon. The higher Al content in the inner layer was retained after 3600 ks oxidation. {\textcopyright} 2003 Elsevier Ltd. All rights reserved.},
+author = {Izumi, Takeshi and Nishimoto, Takumi and Narita, Toshio},
+doi = {10.1016/S0966-9795(03)00083-9},
+issn = {09669795},
+journal = {Intermetallics},
+keywords = {B. phase diagram,Oxidation},
 month = {aug},
-number = {14},
-pages = {4742--4759},
-publisher = {Pergamon},
-title = {{Molecular dynamics simulations of void growth and coalescence in single crystal magnesium}},
-url = {https://www.sciencedirect.com/science/article/pii/S1359645410002867?via{\%}3Dihub},
-volume = {58},
-year = {2010}
+number = {8},
+pages = {841--848},
+publisher = {Elsevier},
+title = {{Formation of nickel aluminide coating on $\gamma$-TiAl alloy}},
+url = {https://www.sciencedirect.com/science/article/pii/S0966979503000839},
+volume = {11},
+year = {2003}
 }
 @article{Izumi2005,
 abstract = {A nickel aluminide coating, developed on $\gamma$-TiAl alloy by electroplating a Ni film followed by a high Al activity pack cementation, has a duplex layer structure with an outer $\delta$-Ni2Al3layer and an inner TiAl3/TiAl2/TiNiAl2layer. The coated $\gamma$-TiAl was oxidized in air for up to 36,000 ks (10,000 h) under thermal cycling between room temperature and 1173 K. A protective Al2O3scale formed with little oxide exfoliation and the average oxidation amount was 37 g/m2after the 36,000 ks oxidation. During oxidation at 1173 K the outer $\delta$-Ni2Al3changed to $\beta$-NiAl with voids and then to TiNiAl2, and the inner TiAl3/TiAl2/TiNiAl2layers to TiAl2and TiNiAl2layers and then to TiAl2and $\tau$3layers. The voids in the outer layer were formed by the phase transformation from the $\delta$-Ni2Al3to $\beta$-NiAl during oxidation. It was found that after the 36,000 ks oxidation the higher Al contents in the inner layers were better retained than that in the outer layer. {\textcopyright} 2005 Elsevier Ltd. All rights reserved.},
@@ -87,11 +53,45 @@ url = {https://www.sciencedirect.com/science/article/pii/S0966979504003851},
 volume = {13},
 year = {2005}
 }
+@article{Es-souni1995,
+abstract = {The creep deformation behaviour and creep microstructures of a dual phase TiAl/Ti3Al alloy Ti48Al2Cr (at.{\%}) with a fully transformed lamellar structure have been investigated at 800°C in tension creep. The creep curves show no steady state creep rate, rather a minimum creep rate was obtained followed by a steep increase in the creep rate. The application of a power-law creep equation of the type dot $\epsilon${\{}lunate{\}} = A$\sigma$nleads to a stress exponent n = 7.6. The deformation microstructures show no deformation twins and essentially consist of 1 2{\textless}110] dislocations; recovered structures were observed in the fine $\gamma$-grains at colony boundaries whereas long and curved 1 2{\textless}110] segments were found in the $\gamma$-lamellae. These microstructural observations suggest a dislocation controlled creep; it ensues that the stress exponent obtained using power-law creep does not reflect the operating creep mechanism. This is attributed to early nucleation and growth of voids and cavities at colony boundaries which do not allow steady-state creep to be established, an underlying condition for the applicability of the power-law equation above. The nucleation and growth of void and cavities are thought to arise as a result of stress buildup at colony boundaries which in turn results from the dependence of deformation behaviour on the orientation of the lamellar colonies with respect to the tensile axis. The loss of creep strength is found to be primarily due to growth and coalescence of these voids and cavities. {\textcopyright} 1994.},
+author = {Es-souni, M. and Bartels, A. and Wagner, R.},
+doi = {10.1016/0956-7151(95)90270-8},
+file = {:home/alex/Documents/Mendeley Desktop/1995/1995{\_}Creep behaviour of a fully transformed near $\gamma$-TiAl alloy Ti48Al2Cr.pdf:pdf},
+isbn = {09567151 (ISSN)},
+issn = {09567151},
+journal = {Acta Metallurgica Et Materialia},
+month = {jan},
+number = {1},
+pages = {153--161},
+publisher = {Pergamon},
+title = {{Creep behaviour of a fully transformed near $\gamma$-TiAl alloy Ti48Al2Cr}},
+url = {https://www.sciencedirect.com/science/article/pii/0956715195902708},
+volume = {43},
+year = {1995}
+}
+@article{void.creep,
+abstract = {An investigation on the effect of aging on the tensile properties and creep behavior of a fully lamellar (FL) Ti-47Al-2Nb-1Mn-0.5W-0.5Mo-0.2Si (at.{\%}) alloy is presented. Aging at intermediate temperatures produces precipitate particles predominantly along $\alpha$2/$\gamma$ lamellar interfaces or within $\alpha$2lamellae. Most of the precipitates are $\beta$-particles with fewer silicides. Aging at intermediate temperatures leads to increased tensile strength as a result of precipitation of $\beta$ and silicide particles. In addition, aging yields an increased primary creep resistance but a shortened creep life for the FL structure. The shortened creep life of the aged FL structures could be a result of early decomposition of $\alpha$2lamellae during creep. {\textcopyright} 2002 Elsevier Science B.V. All rights reserved.},
+author = {Chen, W. R. and Beddoes, J. and Zhao, L.},
+doi = {10.1016/S0921-5093(01)01391-0},
+file = {:home/alex/Documents/Mendeley Desktop/2002/2002{\_}Effect of aging on the tensile and creep behavior of a fully lamellar near $\gamma$-TiAl alloy.pdf:pdf},
+isbn = {0921-5093},
+issn = {09215093},
+journal = {Materials Science and Engineering A},
+keywords = {Aging,Creep,Fully lamellar structure,Tensile,$\gamma$-TiAl},
+month = {jan},
+number = {1-2},
+pages = {306--317},
+publisher = {Elsevier},
+title = {{Effect of aging on the tensile and creep behavior of a fully lamellar near $\gamma$-TiAl alloy}},
+volume = {323},
+year = {2002}
+}
 @article{Watanabe1988,
 abstract = {Interstitial loop formation and void swelling under electron irradiation have been observed with a HVEM in pure Fe-15Cr-(13 to 28)Ni and Fe-16Cr-17Ni-(0.024 to 0.1)P alloys at temperatures between 293 and 873 K. After irradiations, microchemical changes at the void surfaces and matrices were analyzed by EDS. At temperatures below 573 K, where the effect of long range migration of vacancies is negligibly small, the interstitial loop density in FeCrNiP alloys was considerably higher than that in pure FeCrNi ternaries. This indicates that the addition of phosphorus significantly influences the nucleation of interstitial loops at these temperatures. From the temperature dependence of the loop density, an interstitial-phosphorus binding energy of 0.5 eV was derived. At temperatures above 573 K void swelling or vacancy loop formation is prominent and shifted upward by 100 K. Moreover, solute (Ni) segregation to the void surface and matrix were suppressed by phosphorus addition. Such phenomena are thought to be the result of vacancy-phosphorus interaction. {\textcopyright} 1988.},
 author = {Watanabe, H. and Aoki, A. and Murakami, H. and Muroga, T. and Yoshida, N.},
 doi = {10.1016/0022-3115(88)90422-9},
-file = {::;:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Study on the residual stress relaxation in girth-welded steel pipes under bending load using diffraction methods(75).pdf:pdf},
+file = {:home/alex/Documents/Mendeley Desktop/1988/1988{\_}Effects of phosphorus on defect behavior, solute segregation and void swelling in electron irradiated FeCrNi alloys.pdf:pdf},
 issn = {00223115},
 journal = {Journal of Nuclear Materials},
 month = {jul},
@@ -103,27 +103,27 @@ url = {https://www.sciencedirect.com/science/article/pii/0022311588904229},
 volume = {155-157},
 year = {1988}
 }
-@article{Izumi2003,
-abstract = {A nickel aluminide coating process was developed on $\gamma$-TiAl alloy by electroplating a Ni film followed by a high Al activity pack cementation carried out in a vacuum with a mixture of fine Al, NH4Cl, and Al2O3powders at 1273 K for 18 ks. The coating has a duplex layer structure, an outer Ni2Al3layer and an inner TiAl3/TiAl2/TiNiAl2layer. The coated TiAl was oxidized in air for up to 3600 ks under thermal cycling between room temperature and 1173 K. A protective Al2O3scale formed with little oxide exfoliation and the oxidation amount was 8 g/m2after the 3600 ks oxidation. During oxidation at 1173 K the as-coated layer structure changed from an outer Ni2Al3and inner TiAl3/TiAl2/TiNiAl2layers to an outer $\beta$-NiAl and inner TiAl2and TiNiAl2layers with voids in the outer layer. The voids appear to be formed by the phase change from the Ni2Al3to $\beta$-NiAl during oxidation. A part of the Ti-Al-Ni phase diagram at 1173 K was developed experimentally and it was shown that the solubility limits of Ti into both the Ni2Al3and $\beta$-NiAl phases were less than 0.5at.{\%}. The coating with more Al in the inner layer that in the outer layer would be formed by inward diffusion of Al, caused by a so-called up-hill diffusion phenomenon. The higher Al content in the inner layer was retained after 3600 ks oxidation. {\textcopyright} 2003 Elsevier Ltd. All rights reserved.},
-author = {Izumi, Takeshi and Nishimoto, Takumi and Narita, Toshio},
-doi = {10.1016/S0966-9795(03)00083-9},
-issn = {09669795},
-journal = {Intermetallics},
-keywords = {B. phase diagram,Oxidation},
-month = {aug},
-number = {8},
-pages = {841--848},
-publisher = {Elsevier},
-title = {{Formation of nickel aluminide coating on $\gamma$-TiAl alloy}},
-url = {https://www.sciencedirect.com/science/article/pii/S0966979503000839},
-volume = {11},
-year = {2003}
+@article{Greenfield1972,
+abstract = {An investigation has shown that it is possible to relate void formation, void growth, and tensile ductility to microstructural features in an $\alpha$-$\beta$ titanium alloy, Ti-5.25A1-5.5V-0.9Fe-0.5Cu, heat treated to a constant yield strength. Equations relating tensile void growth rates to microstructure for both equiaxed,E, and Widmanst{\"{a}}tten plus grain boundary$\alpha$, W + ITG. B.,in aged $\beta$ morphologies have been derived. A mechanism for void formation at $\alpha$-$\beta$ interfaces is presented which accounts for the observed fact that voids do not form at Widmanst{\"{a}}tten $\alpha$ platelets. Tensile fracture is shown to be intergranular in nature and occurs when a critical crack length-stress relationship is satisfied. The amount of ductility achievable in a specimen depends upon the rate of void growth. If the rate is large, the void reaches a critical size for fracture at a lower applied stress and strain and hence the ductility is less.},
+author = {Greenfield, M. A. and Margolin, H.},
+doi = {10.1007/BF02644241},
+file = {:home/alex/Documents/Mendeley Desktop/1972/1972{\_}Mechanism of Void Formation, Void Growth, and Tensile Fracture in an Alloy Consisting of Two Ductile Phases.pdf:pdf},
+issn = {0360-2133},
+journal = {Metall Trans},
+month = {oct},
+number = {10},
+pages = {2649--2659},
+publisher = {Springer-Verlag},
+title = {{Mechanism of Void Formation, Void Growth, and Tensile Fracture in an Alloy Consisting of Two Ductile Phases.}},
+url = {http://link.springer.com/10.1007/BF02644241},
+volume = {3},
+year = {1972}
 }
 @article{Kim1995,
 abstract = {Deformation and fracture behavior of two-phase $\gamma$-TiAl alloys were investigated under monotonic tension loading conditions for duplex and lamellar microstructural forms. The effects of microstructure on tensile properties and deformation-fracture behavior are analyzed for deformation temperatures below and above the brittle-ductile transition. The crack initiation toughness and associated strains near the crack tip are used to explain the inverse relationship between ductility and toughness observed at room temperature. Fracture resistance behavior and toughening mechanisms at room temperature are explained in terms of microstructure and deformation anisotropy. The competition between the effects of grain size and lamellar spacing or tensile and toughness properties is discussed. {\textcopyright} 1995.},
 author = {Kim, Young Won},
 doi = {10.1016/0921-5093(94)03271-8},
-file = {::;:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Study on the residual stress relaxation in girth-welded steel pipes under bending load using diffraction methods(70).pdf:pdf},
+file = {:home/alex/Documents/Mendeley Desktop/1995/1995{\_}Effects of microstructure on the deformation and fracture of $\gamma$-TiAl alloys.pdf:pdf},
 issn = {09215093},
 journal = {Materials Science and Engineering A},
 keywords = {Alloys,Aluminium,Deformation,Fracture,Titanium},
@@ -136,20 +136,20 @@ url = {https://www.sciencedirect.com/science/article/pii/0921509394032718},
 volume = {192-193},
 year = {1995}
 }
-@article{Es-souni1995,
-abstract = {The creep deformation behaviour and creep microstructures of a dual phase TiAl/Ti3Al alloy Ti48Al2Cr (at.{\%}) with a fully transformed lamellar structure have been investigated at 800°C in tension creep. The creep curves show no steady state creep rate, rather a minimum creep rate was obtained followed by a steep increase in the creep rate. The application of a power-law creep equation of the type dot $\epsilon${\{}lunate{\}} = A$\sigma$nleads to a stress exponent n = 7.6. The deformation microstructures show no deformation twins and essentially consist of 1 2{\textless}110] dislocations; recovered structures were observed in the fine $\gamma$-grains at colony boundaries whereas long and curved 1 2{\textless}110] segments were found in the $\gamma$-lamellae. These microstructural observations suggest a dislocation controlled creep; it ensues that the stress exponent obtained using power-law creep does not reflect the operating creep mechanism. This is attributed to early nucleation and growth of voids and cavities at colony boundaries which do not allow steady-state creep to be established, an underlying condition for the applicability of the power-law equation above. The nucleation and growth of void and cavities are thought to arise as a result of stress buildup at colony boundaries which in turn results from the dependence of deformation behaviour on the orientation of the lamellar colonies with respect to the tensile axis. The loss of creep strength is found to be primarily due to growth and coalescence of these voids and cavities. {\textcopyright} 1994.},
-author = {Es-souni, M. and Bartels, A. and Wagner, R.},
-doi = {10.1016/0956-7151(95)90270-8},
-file = {::;:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Study on the residual stress relaxation in girth-welded steel pipes under bending load using diffraction methods(74).pdf:pdf},
-isbn = {09567151 (ISSN)},
-issn = {09567151},
-journal = {Acta Metallurgica Et Materialia},
-month = {jan},
-number = {1},
-pages = {153--161},
+@article{Tang2010,
+abstract = {The growth and coalescence of voids in magnesium single crystals at the nanoscale have been investigated using molecular dynamics simulations and the embedded atom method. One void and two void specimens with identical initial void volume fractions were utilized to study the mechanism of void growth and coalescence. In order to study the influences of material length scale on void evolution in single crystals four specimen sizes with the same initial volume fraction of voids were considered. Investigations of the effects of temperature and strain rate were also performed. Uniaxial stress-strain curves were monitored during increasing employed strain. The simulation results show that the specimen size, loading strain rate and temperature had apparent influences on the twin or dislocation pattern, void evolution shape and uniaxial stress-strain responses, but negligible effects on the initial slopes of the uniaxial stress-strain curves. Furthermore, the nucleation stress of twin bands in orientation A - x[0 0 0 1]-y[1 over(2, ̄) 1 0]-z[1 0 over(1, ̄) 0] was much higher than that of plastic deformation in orientation B - x[1 over(2, ̄) 1 0]-y[1 0 over(1, ̄) 0]-z[0 0 0 1].},
+author = {Tang, Tian and Kim, Sungho and Horstemeyer, M. F.},
+doi = {10.1016/j.actamat.2010.05.011},
+isbn = {13596454},
+issn = {13596454},
+journal = {Acta Materialia},
+keywords = {Embedded atom method,Magnesium single crystals,Molecular dynamics simulations,Void coalescence,Void growth},
+month = {aug},
+number = {14},
+pages = {4742--4759},
 publisher = {Pergamon},
-title = {{Creep behaviour of a fully transformed near $\gamma$-TiAl alloy Ti48Al2Cr}},
-url = {https://www.sciencedirect.com/science/article/pii/0956715195902708},
-volume = {43},
-year = {1995}
+title = {{Molecular dynamics simulations of void growth and coalescence in single crystal magnesium}},
+url = {https://www.sciencedirect.com/science/article/pii/S1359645410002867?via{\%}3Dihub},
+volume = {58},
+year = {2010}
 }
