--- a/draft/ref/组内发表.bib
+++ b/draft/ref/组内发表.bib
@@ -5,13 +5,13 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
 
 @article{Ruicheng,
 author = {Ruicheng, Feng and Haiyang, Qiao and Haiyan, L I and Wenyuan, Song and Yongnian, Q I},
-file = {::;:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Study on the residual stress relaxation in girth-welded steel pipes under bending load using diffraction methods(122).pdf:pdf},
+file = {:home/alex/Documents/Mendeley Desktop/Unknown/Unknown{\_}Effect of cutting crystal directions on micro-structure evolution of single crystal $\gamma$ -TiAl alloy.pdf:pdf},
 title = {{Effect of cutting crystal directions on micro-structure evolution of single crystal $\gamma$ -TiAl alloy}}
 }
 @article{Feng2018,
 author = {Feng, Ruicheng and Song, Wenyuan and Li, Haiyan and Qi, Yongnian and Qiao, Haiyang and Li, Longlong},
 doi = {10.3390/ma11061025},
-file = {::;:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Study on the residual stress relaxation in girth-welded steel pipes under bending load using diffraction methods(114).pdf:pdf},
+file = {:home/alex/Documents/Mendeley Desktop/2018/2018{\_}Effects of Annealing on the Residual Stress in $\gamma$-TiAl Alloy by Molecular Dynamics Simulation.pdf:pdf},
 issn = {1996-1944},
 journal = {Materials},
 keywords = {anneal,molecular dynamics,residual stress,$\gamma$ -tial alloy},
