--- a/draft/ref/VIOLET-ref.bib
+++ b/draft/ref/VIOLET-ref.bib
@@ -7,7 +7,7 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
 abstract = {Intermetallic titanium aluminides are often alloyed with niobium to improve oxidation resistance and mechanical properties. Depending on the overall alloy composition and on the solubility of the present phases for niobium, new phases may be introduced in the alloys' microstructure upon niobium addition. Here we describe the microstructure of the alloy Ti-42Al-8.5Nb produced by powder metallurgy after annealing at 550 °C and 650 °C. We identify the orthorhombic O-phase within $\alpha$2 laths of lamellar ($\alpha$2 + $\gamma$) colonies by single crystal electron diffraction and high-resolution imaging. Domains of O-phase variants and $\alpha$2 phase form columnar crystallites in $\alpha$2 (0001) planes having low indexed $\alpha$2 {\{}11-20{\}} and {\{}1-100{\}} interface planes. The nm-sized domains are rotated with respect to each other resulting in elastic strains across the domain boundaries. No elemental segregation of Nb was detected in $\alpha$2/O-phase lamellae.},
 author = {Gabrisch, Heike and Lorenz, Uwe and Pyczak, Florian and Rackel, Marcus and Stark, Andreas},
 doi = {10.1016/j.actamat.2017.05.067},
-file = {::;:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Study on the residual stress relaxation in girth-welded steel pipes under bending load using diffraction methods(126).pdf:pdf},
+file = {:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Morphology and stability of orthorhombic and hexagonal phases in a lamellar $\gamma$-Ti-42Al-8.5Nb alloy-A transmission electron microsco.pdf:pdf},
 isbn = {1359-6454},
 issn = {13596454},
 journal = {Acta Materialia},
@@ -17,34 +17,6 @@ publisher = {Elsevier Ltd},
 title = {{Morphology and stability of orthorhombic and hexagonal phases in a lamellar $\gamma$-Ti-42Al-8.5Nb alloy-A transmission electron microscopy study}},
 volume = {135},
 year = {2017}
-}
-@article{intro-structure,
-author = {Microstructures, Lamellar},
-doi = {10.1002/9783527636204.ch6},
-file = {::;:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Study on the residual stress relaxation in girth-welded steel pipes under bending load using diffraction methods(105).pdf:pdf},
-journal = {Gamma Titanium Aluminide Alloys},
-pages = {125--248},
-title = {{Deformation Behavior of Two-Phase $\alpha$2(Ti3Al) + $\gamma$(TiAl) Alloys}},
-url = {http://doi.wiley.com/10.1002/9783527636204.ch6},
-volume = {2},
-year = {2011}
-}
-@article{void.creep,
-abstract = {An investigation on the effect of aging on the tensile properties and creep behavior of a fully lamellar (FL) Ti-47Al-2Nb-1Mn-0.5W-0.5Mo-0.2Si (at.{\%}) alloy is presented. Aging at intermediate temperatures produces precipitate particles predominantly along $\alpha$2/$\gamma$ lamellar interfaces or within $\alpha$2lamellae. Most of the precipitates are $\beta$-particles with fewer silicides. Aging at intermediate temperatures leads to increased tensile strength as a result of precipitation of $\beta$ and silicide particles. In addition, aging yields an increased primary creep resistance but a shortened creep life for the FL structure. The shortened creep life of the aged FL structures could be a result of early decomposition of $\alpha$2lamellae during creep. {\textcopyright} 2002 Elsevier Science B.V. All rights reserved.},
-author = {Chen, W. R. and Beddoes, J. and Zhao, L.},
-doi = {10.1016/S0921-5093(01)01391-0},
-file = {::;:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Study on the residual stress relaxation in girth-welded steel pipes under bending load using diffraction methods(63).pdf:pdf},
-isbn = {0921-5093},
-issn = {09215093},
-journal = {Materials Science and Engineering A},
-keywords = {Aging,Creep,Fully lamellar structure,Tensile,$\gamma$-TiAl},
-month = {jan},
-number = {1-2},
-pages = {306--317},
-publisher = {Elsevier},
-title = {{Effect of aging on the tensile and creep behavior of a fully lamellar near $\gamma$-TiAl alloy}},
-volume = {323},
-year = {2002}
 }
 @article{int,,
 abstract = {The deformation mechanisms active in the $\gamma$- and $\alpha$ 2 -lamellae of a Ti-48 at.{\%}Al alloy during room-temperature and 800 C tensile loading have been determined by transmission electron microscopy. A marked change in the plastic behaviour of the $\alpha$ 2 -phase has been detected between room and elevated temperature, whereas the deformation mechanisms active in the $\gamma$-phase remained the same at both temperatures. At room temperature, plasticity in the $\alpha$ 2 -phase occurred only locally by prism plane slip of dislocations with Burgers vectors parallel to 〈1120〉 where cross-lamellar twins in the $\gamma$-plane impinged on the ($\gamma$/$\alpha$ 2 )-interface. At 800′C more homogeneous plastic behaviour of the $\alpha$ 2 -phase resulted from slip and climb activity of dislocations. with Burgers vector components parallel to〈1120〉and parallel to both 〈1120〉 and [0001] The increased contribution to strain accommodation at 800′C by the $\alpha$ 2 -lamellae coincided with a change in predominant fracture mode. {\textcopyright} 1997 Taylor  {\&}  Francis Ltd.},
@@ -61,11 +33,39 @@ url = {int.uti.J.1},
 volume = {75},
 year = {1997}
 }
+@article{intro-structure,
+author = {Microstructures, Lamellar},
+doi = {10.1002/9783527636204.ch6},
+file = {:home/alex/Documents/Mendeley Desktop/2011/2011{\_}Deformation Behavior of Two-Phase $\alpha$2(Ti3Al) $\gamma$(TiAl) Alloys.pdf:pdf},
+journal = {Gamma Titanium Aluminide Alloys},
+pages = {125--248},
+title = {{Deformation Behavior of Two-Phase $\alpha$2(Ti3Al) + $\gamma$(TiAl) Alloys}},
+url = {http://doi.wiley.com/10.1002/9783527636204.ch6},
+volume = {2},
+year = {2011}
+}
+@article{void.creep,
+abstract = {An investigation on the effect of aging on the tensile properties and creep behavior of a fully lamellar (FL) Ti-47Al-2Nb-1Mn-0.5W-0.5Mo-0.2Si (at.{\%}) alloy is presented. Aging at intermediate temperatures produces precipitate particles predominantly along $\alpha$2/$\gamma$ lamellar interfaces or within $\alpha$2lamellae. Most of the precipitates are $\beta$-particles with fewer silicides. Aging at intermediate temperatures leads to increased tensile strength as a result of precipitation of $\beta$ and silicide particles. In addition, aging yields an increased primary creep resistance but a shortened creep life for the FL structure. The shortened creep life of the aged FL structures could be a result of early decomposition of $\alpha$2lamellae during creep. {\textcopyright} 2002 Elsevier Science B.V. All rights reserved.},
+author = {Chen, W. R. and Beddoes, J. and Zhao, L.},
+doi = {10.1016/S0921-5093(01)01391-0},
+file = {:home/alex/Documents/Mendeley Desktop/2002/2002{\_}Effect of aging on the tensile and creep behavior of a fully lamellar near $\gamma$-TiAl alloy.pdf:pdf},
+isbn = {0921-5093},
+issn = {09215093},
+journal = {Materials Science and Engineering A},
+keywords = {Aging,Creep,Fully lamellar structure,Tensile,$\gamma$-TiAl},
+month = {jan},
+number = {1-2},
+pages = {306--317},
+publisher = {Elsevier},
+title = {{Effect of aging on the tensile and creep behavior of a fully lamellar near $\gamma$-TiAl alloy}},
+volume = {323},
+year = {2002}
+}
 @article{Kim1991,
 abstract = {During the last two years remarkable improvements have been made in the properties (such as toughness and creep) and processing technology of gamma titanium aluminides, making them potentially viable engineering alloys for high-temperature structural applications. These achievements were made possible by a greater understanding of both the fundamental and the practical aspects of these aluminides, such as phase relationships, the effects of alloying elements, deformation mechanisms, microstructure evolution and processing. This article reviews the current understanding of the above specific aspects and the processing-microstructure-property relationships, and identifies pacing problems and applications.},
 author = {Kim, Young Won and Dimiduk, Dennis M.},
 doi = {10.1007/BF03221103},
-file = {::;:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Study on the residual stress relaxation in girth-welded steel pipes under bending load using diffraction methods(106).pdf:pdf},
+file = {:home/alex/Documents/Mendeley Desktop/1991/1991{\_}Progress in the understanding of gamma titanium aluminides.pdf:pdf},
 isbn = {1047-4838, 1543-1851},
 issn = {10474838},
 journal = {Jom},
@@ -91,24 +91,10 @@ url = {https://www.jstage.jst.go.jp/article/isijinternational/58/5/58{\_}ISIJINT
 volume = {58},
 year = {2018}
 }
-@article{Xiong2015,
-abstract = {Dislocation interactions with distributed condensed vacancy clusters in fcc metals were simulated via a concurrent atomistic-continuum method. Due to void strengthening, the dislocation lines are found to bow as a result of pinning on the original glide plane and undergo depinning through drawing out screw dipoles and forming prismatic loops on the secondary slip plane. We discovered an inertia-induced transition between Hirsch looping and void shearing mechanisms as the void spacing ranges from the scale of nm to hundreds of nm. Contrary to prior understanding, simulations suggest that large voids (∼5 nm in diameter) can behave as weak barriers to dislocation motions under high strain-rate dynamic conditions.},
-author = {Xiong, Liming and Xu, Shuozhi and McDowell, David L. and Chen, Youping},
-doi = {10.1016/j.ijplas.2014.08.002},
-file = {::;:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Study on the residual stress relaxation in girth-welded steel pipes under bending load using diffraction methods(121).pdf:pdf},
-isbn = {0749-6419},
-issn = {07496419},
-journal = {International Journal of Plasticity},
-keywords = {A. Dislocations,A. Strengthening mechanisms,B. Metallic material,C. Finite elements,C. Numerical algorithms},
-pages = {33--42},
-title = {{Concurrent atomistic-continuum simulations of dislocation-void interactions in fcc crystals}},
-volume = {65},
-year = {2015}
-}
 @article{Reserved1992,
 author = {Schwarz, R. B. and Desch, P. B. and Srinivasan, S. and Nash, P.},
 doi = {10.1016/0965-9773(92)90049-4},
-file = {::;:home/alex/Documents/Mendeley Desktop/2017/2017{\_}Study on the residual stress relaxation in girth-welded steel pipes under bending load using diffraction methods(109).pdf:pdf},
+file = {:home/alex/Documents/Mendeley Desktop/1992/1992{\_}Synthesis and properties of trialuminides with ultra-fine microstructures.pdf:pdf},
 issn = {09659773},
 journal = {Nanostructured Materials},
 month = {jan},
@@ -117,4 +103,18 @@ pages = {37--42},
 title = {{Synthesis and properties of trialuminides with ultra-fine microstructures}},
 volume = {1},
 year = {1992}
+}
+@article{Xiong2015,
+abstract = {Dislocation interactions with distributed condensed vacancy clusters in fcc metals were simulated via a concurrent atomistic-continuum method. Due to void strengthening, the dislocation lines are found to bow as a result of pinning on the original glide plane and undergo depinning through drawing out screw dipoles and forming prismatic loops on the secondary slip plane. We discovered an inertia-induced transition between Hirsch looping and void shearing mechanisms as the void spacing ranges from the scale of nm to hundreds of nm. Contrary to prior understanding, simulations suggest that large voids (∼5 nm in diameter) can behave as weak barriers to dislocation motions under high strain-rate dynamic conditions.},
+author = {Xiong, Liming and Xu, Shuozhi and McDowell, David L. and Chen, Youping},
+doi = {10.1016/j.ijplas.2014.08.002},
+file = {:home/alex/Documents/Mendeley Desktop/2015/2015{\_}Concurrent atomistic-continuum simulations of dislocation-void interactions in fcc crystals.pdf:pdf},
+isbn = {0749-6419},
+issn = {07496419},
+journal = {International Journal of Plasticity},
+keywords = {A. Dislocations,A. Strengthening mechanisms,B. Metallic material,C. Finite elements,C. Numerical algorithms},
+pages = {33--42},
+title = {{Concurrent atomistic-continuum simulations of dislocation-void interactions in fcc crystals}},
+volume = {65},
+year = {2015}
 }
